fix footer contrast

--- a/_sass/utilities/_colors.scss
+++ b/_sass/utilities/_colors.scss
@@ -118,6 +118,10 @@
   color: $red-300 !important;
 }
 
+.text-ideal-footer {
+  color: $ideal-footer !important;
+}
+
 // Background colors
 
 .bg-grey-dk-000 {
